--- a/QuanLyTiecCuoi/MVVM/View/DatTiec.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec.xaml
@@ -5,96 +5,104 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:QuanLyTiecCuoi.MVVM.View"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1000" d:DesignWidth="1600"
       Title="DatTiec">
 
-    <Grid Margin="100,0,0,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid Margin="0,0,0,0"
-              Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock 
-                Text="Serenité Wedding" 
-                FontSize="30" 
-                FontStyle="Italic" 
-                FontWeight="SemiBold" 
-                Margin="0 0 20 0"
-                Grid.Row="0"/>
-            <Grid Margin="0,0,0,0"
-                  Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <StackPanel 
-                Orientation="Horizontal" 
-                HorizontalAlignment="Center"
-                Margin="20 0 0 10"
-                Grid.Row="1">
-                    <ComboBox 
-                    Width="200" 
-                    Height="40" 
-                    Margin="0 10 30 10">
-                        <ComboBoxItem Content="Món 1" />
-                    </ComboBox>
-                    <TextBox
-                    TextAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    FontStyle="Italic" 
-                    FontSize="18" 
-                    Margin="0 10 20 10"
-                    Width="200"
-                    BorderThickness="1"
-                    GotFocus="TextBox_GotFocus"
-                    LostFocus="TextBox_LostFocus" TextChanged="TextBox_TextChanged"/>
-                </StackPanel>
-            </Grid>
-        </Grid>
 
-        <Border 
-            Background="#F8F4EF" 
-            CornerRadius="10" 
-            Padding="15" 
-            BorderBrush="Gray" 
-            BorderThickness="1"
-            Margin="0,0,0,0"
-            Width="690"
-            HorizontalAlignment="Center" 
-            Grid.Row="2">
-            <ListView 
-                ItemsSource="{Binding DanhSachDatTiec}" 
-                Grid.RowSpan="2"
-                HorizontalAlignment="Center" >
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Cô dâu" Width="60" DisplayMemberBinding="{Binding TenCoDau}" />
-                        <GridViewColumn Header="Chú rể" Width="60" DisplayMemberBinding="{Binding TenChuRe}" />
-                        <GridViewColumn Header="SĐT" Width="70" DisplayMemberBinding="{Binding SDT}" />
-                        <GridViewColumn Header="Đặt cọc" Width="70" DisplayMemberBinding="{Binding TienDatCoc}" />
-                        <GridViewColumn Header="Ca" Width="80" DisplayMemberBinding="{Binding MaCa}" />
-                        <GridViewColumn Header="Sảnh" Width="60" DisplayMemberBinding="{Binding MaSanh}" />
-                        <GridViewColumn Header="Ngày đãi" Width="80" DisplayMemberBinding="{Binding NgayDatTiec}" />
-                        <GridViewColumn Header="Số bàn" Width="60" DisplayMemberBinding="{Binding SoLuongBan}" />
-                        <GridViewColumn Header="Số bàn dự trữ" Width="80" DisplayMemberBinding="{Binding SoBanDuTru}" />
-                        <GridViewColumn Header="  " Width="80" DisplayMemberBinding="{Binding Icon}" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </Border>
-        <StackPanel Orientation="Horizontal" 
-            HorizontalAlignment="Right" 
-            Margin="0,10,10,0" 
-            Grid.Row="3">
-            <Button Content="Thêm tiệc cưới" Width="100" Height="30" Margin="0 10 20 10" Click="Add_Click"/>
-            <Button Content="In hóa đơn" Width="100" Height="30" Margin="0 10 20 10" Click="InHoaDon_Click"/>
-        </StackPanel>
-    </Grid>
+    <Viewbox Stretch="Uniform">
+        <Grid Width="1600" Height="1000">
+            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
+                <!-- Root Grid full màn hình -->
+                <Grid Margin="20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- Header -->
+                    <StackPanel Grid.Row="0" Margin="0 10">
+                        <TextBlock 
+                            FontFamily="Cambria"
+                            Text="Serenité Wedding" 
+                            FontSize="60" 
+                            FontWeight="SemiBold" 
+                            HorizontalAlignment="Left"/>
+                    </StackPanel>
+
+                    <!-- Input controls -->
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" Margin="0 10">
+                        <ComboBox
+                            Width="260" Height="40" 
+                            FontSize="20" 
+                            Margin="10">
+                            <ComboBoxItem Content="Món 1" />
+                        </ComboBox>
+                        <TextBox
+                            Width="250"
+                            Margin="10"
+                            TextAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            FontStyle="Italic" 
+                            FontSize="18"
+                            BorderThickness="1"
+                            GotFocus="TextBox_GotFocus"
+                            LostFocus="TextBox_LostFocus" 
+                            TextChanged="TextBox_TextChanged"/>
+                    </StackPanel>
+
+
+                    <!-- ListView section -->
+                    <DataGrid 
+                        ItemsSource="{Binding DanhSachDatTiec}" AutoGenerateColumns="False"
+                        HorizontalAlignment="Stretch" Margin="0 10" CanUserAddRows="False" Grid.Row="2">
+                        <DataGrid.Resources>
+                            <Style TargetType="DataGridColumnHeader">
+                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                <Setter Property="FontSize" Value="20"/>
+                                <Setter Property="FontFamily" Value="Cambria"/>
+                            </Style>
+                        </DataGrid.Resources>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Cô dâu" Binding="{Binding TenCoDau}" Width="*" />
+                            <DataGridTextColumn Header="Chú rể" Binding="{Binding TenChuRe}" Width="*" />
+                            <DataGridTextColumn Header="SĐT" Binding="{Binding SDT}" Width="*" />
+                            <DataGridTextColumn Header="Đặt cọc" Binding="{Binding TienDatCoc}" Width="*" />
+                            <DataGridTextColumn Header="Ca" Binding="{Binding MaCa}" Width="*" />
+                            <DataGridTextColumn Header="Sảnh" Binding="{Binding MaSanh}" Width="*" />
+                            <DataGridTextColumn Header="Ngày đãi" Binding="{Binding NgayDatTiec}" Width="*" />
+                            <DataGridTextColumn Header="Số bàn" Binding="{Binding SoLuongBan}" Width="*" />
+                            <DataGridTextColumn Header="Dự trữ" Binding="{Binding SoBanDuTru}" Width="*" />
+                            <DataGridTemplateColumn Header=" " Width="0.5*">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Content="✏" Click="Edit_Click"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <!-- Button row -->
+                    <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Right" 
+                        Margin="0,10,0,0" 
+                        Grid.Row="3">
+                        <StackPanel.Resources>
+                            <Style TargetType="Button">
+                                <Setter Property="Margin" Value="0 0 10 0"/>
+                                <Setter Property="Width" Value="200"/>
+                                <Setter Property="Height" Value="50"/>
+                                <Setter Property="FontSize" Value="24"/>
+                                <Setter Property="FontFamily" Value="Cambria"/>
+                                <Setter Property="FontStyle" Value="Normal"/>
+                            </Style>
+                        </StackPanel.Resources>
+                        <Button Content="Thêm tiệc cưới" Click="Add_Click"/>
+                        <Button Content="In hóa đơn" Click="InHoaDon_Click"/>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
+    </Viewbox>
 </Page>
