--- a/QuanLyTiecCuoi/MVVM/View/BaoCao/BaoCaoView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/BaoCao/BaoCaoView.xaml
@@ -39,11 +39,11 @@
                        VerticalAlignment="Bottom"
                        Margin="10,15,10,0"
                        Style="{StaticResource Header1Style}" />
-            <controlBar:ControlBarUserControl Grid.Row="0"
+          <!--  <controlBar:ControlBarUserControl Grid.Row="0"
                                               Grid.Column="2"
                                               VerticalAlignment="Center"
                                               HorizontalAlignment="Right"
-                                              Margin="0,0,12,0" />
+                                              Margin="0,0,12,0" /> -->
             <StackPanel Orientation="Horizontal"
                         Grid.Row="1"
                         Grid.ColumnSpan="2"
