--- a/QuanLyTiecCuoi/App.xaml
+++ b/QuanLyTiecCuoi/App.xaml
@@ -2,13 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QuanLyTiecCuoi"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MVVM/View/MainWindow/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ResourcesXAML/MainResource.xaml"/>
-
-                <ResourceDictionary Source="/Theme/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/ResourcesXAML/MainResource.xaml" />
+                <ResourceDictionary Source="/Theme/Styles/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="/Theme/Styles/ComBoBoxStyle.xaml" />
                 <ResourceDictionary Source="/Theme/Styles/TextBlockStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBoxStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
@@ -18,7 +18,7 @@
             <ImageSource x:Key="MinimizeImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/minimize.png</ImageSource>
             <ImageSource x:Key="MaxiImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/maxi.png</ImageSource>
             <ImageSource x:Key="CloseImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/close.png</ImageSource>
-            <ImageSource x:Key="ArrowDownImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/arrow-down.png</ImageSource>
+            <ImageSource x:Key="ArrowDownImg">pack://application:,,,/resources/images/controlbarimg/arrow-down.png</ImageSource>
         </ResourceDictionary>
 
     </Application.Resources>
